[tool.poetry]
name = "cubone"
version = "0.1.0"
description = "A pygame scaffold package"
authors = ["Francisco <vieirafrancisco.dev@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
