[tool.poetry]
name = "cubone"
version = "0.1.2"
description = "A pygame scaffold package"
authors = ["Francisco <vieirafrancisco.dev@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
Jinja2 = "^3.1.2"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"

[tool.poetry.scripts]
cubone = "cubone.cli.core:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
